--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h1>
                     Experience the comfort filipino taste with every bite of our freshly baked local ensaymada
                 </h1>
-                <a class="menu-btn" href="">Menu</a>
+                <a class="menu-btn" href="/menu">Menu</a>
             </div>
 
             <div class="hero-img">
@@ -98,7 +98,7 @@
             <h1>
                 Our Story
             </h1>
-            <a class="menu-btn" href="about.html">Read</a>
+            <a class="menu-btn" href="/about">Read</a>
         </div>
     </section>
 
