--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo-wrapper">
-            <a href="#hero">
+            <a href="/">
                 <img class="logo" src="images/logo.png" alt="Sugar Artist logo">
             </a>
         </div>
